--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -253,6 +253,30 @@ h6 {
   margin: 0;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+h6 {
+  font-size: 0.875rem;
+}
+
 p {
   margin: 0;
 }
@@ -21941,7 +21965,7 @@ a {
   color: #607d8b;
 }
 
-.tekt-us-gelap {
+.teks-us-gelap {
   color: #212529;
 }
 
@@ -22125,6 +22149,55 @@ a {
   font-size: xx-small;
 }
 
+.tombol, .tombol-daun, .tombol-mati, .tombol-bayang-2, .tombol-bayang-1, .tombol-klik {
+  border: none;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.tombol:hover, .tombol-daun:hover, .tombol-mati:hover, .tombol-bayang-2:hover, .tombol-bayang-1:hover, .tombol-klik:hover {
+  opacity: 0.7;
+}
+
+.tombol-klik:active {
+  box-shadow: 0 5px #212529;
+  transform: translateY(-4px);
+}
+
+.tombol-bayang-1 {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.tombol-bayang-2 {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.tombol-mati {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.tombol-daun {
+  border-radius: 50% 10%/90%;
+}
+
+.kelompok-tombol-horizontal .tombol, .kelompok-tombol-horizontal .tombol-klik, .kelompok-tombol-horizontal .tombol-bayang-1, .kelompok-tombol-horizontal .tombol-bayang-2, .kelompok-tombol-horizontal .tombol-mati, .kelompok-tombol-horizontal .tombol-daun {
+  float: left;
+  border: 1px solid #212529;
+  margin: 0;
+}
+
+.kelompok-tombol-horizontal .tombol:last-child, .kelompok-tombol-horizontal .tombol-klik:last-child, .kelompok-tombol-horizontal .tombol-bayang-1:last-child, .kelompok-tombol-horizontal .tombol-bayang-2:last-child, .kelompok-tombol-horizontal .tombol-mati:last-child, .kelompok-tombol-horizontal .tombol-daun:last-child {
+  float: none;
+}
+
+.kelompok-tombol-vertikal .tombol, .kelompok-tombol-vertikal .tombol-klik, .kelompok-tombol-vertikal .tombol-bayang-1, .kelompok-tombol-vertikal .tombol-bayang-2, .kelompok-tombol-vertikal .tombol-mati, .kelompok-tombol-vertikal .tombol-daun {
+  display: block;
+  border: 1px solid #212529;
+  margin: 0;
+}
+
 .teks-kolom-1 {
   columns: 1;
   column-gap: 40px;
@@ -22155,36 +22228,6 @@ a {
   column-rule: 1px solid #9e9e9e;
 }
 
-@media screen and (min-width: 0) {
-  .kotak {
-    background-color: #f44336;
-  }
-}
-@media screen and (min-width: 640px) {
-  .kotak {
-    background-color: #795548;
-  }
-}
-@media screen and (min-width: 768px) {
-  .kotak {
-    background-color: #2196f3;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .kotak {
-    background-color: #e91e63;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .kotak {
-    background-color: #9c27b0;
-  }
-}
-@media screen and (min-width: 1536px) {
-  .kotak {
-    background-color: #ffeb3b;
-  }
-}
 .item-kiri-atas {
   display: flex;
   justify-content: flex-start;
