--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -22204,7 +22204,6 @@ a {
   column-rule: 1px solid #9e9e9e;
 }
 
-/* default start*/
 .kontener {
   display: grid;
   box-sizing: border-box;
@@ -22217,7 +22216,6 @@ a {
   padding: 1rem;
 }
 
-/* ----------------------------- */
 .badan {
   grid-area: badan;
   padding-left: 1.2rem;
@@ -22240,21 +22238,16 @@ a {
   padding: 1rem;
 }
 
-/* ----------------------------- */
 .kaki {
   grid-area: kaki;
   padding: 1rem;
 }
 
-/* ----------------------------- */
-/* default end*/
-/* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
   .badan {
     padding: 0;
   }
 }
-/* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .menu-samping-kiri {
     display: grid;
@@ -22271,15 +22264,18 @@ a {
     grid-template-columns: minmax(130px, 25%) 1fr minmax(130px, 25%);
   }
 }
-/* // Large devices (desktops, 992px and up) */
-/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 992px) {
+  .badan {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 1200px) {
   .badan {
     width: 85%;
     margin: 0 auto;
   }
 }
-/* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 2560px) {
   .badan {
     width: 50%;
