menambahkan warna jingga ke dalam list teks untuk background terang

--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -316,14 +316,14 @@ a {
 .gaya-tabel-1-us-merah td, .gaya-tabel-2-us-merah td,
 .gaya-tabel-1-us-merah th,
 .gaya-tabel-2-us-merah th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-merah tr:nth-child, .gaya-tabel-2-us-merah tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-merah tr:hover, .gaya-tabel-2-us-merah tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-merah th, .gaya-tabel-2-us-merah th {
   padding-top: 12px;
@@ -521,14 +521,14 @@ a {
 .gaya-tabel-1-us-merahjambu td, .gaya-tabel-2-us-merahjambu td,
 .gaya-tabel-1-us-merahjambu th,
 .gaya-tabel-2-us-merahjambu th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-merahjambu tr:nth-child, .gaya-tabel-2-us-merahjambu tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-merahjambu tr:hover, .gaya-tabel-2-us-merahjambu tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-merahjambu th, .gaya-tabel-2-us-merahjambu th {
   padding-top: 12px;
@@ -726,14 +726,14 @@ a {
 .gaya-tabel-1-us-ungu td, .gaya-tabel-2-us-ungu td,
 .gaya-tabel-1-us-ungu th,
 .gaya-tabel-2-us-ungu th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-ungu tr:nth-child, .gaya-tabel-2-us-ungu tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-ungu tr:hover, .gaya-tabel-2-us-ungu tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-ungu th, .gaya-tabel-2-us-ungu th {
   padding-top: 12px;
@@ -931,14 +931,14 @@ a {
 .gaya-tabel-1-us-ungupekat td, .gaya-tabel-2-us-ungupekat td,
 .gaya-tabel-1-us-ungupekat th,
 .gaya-tabel-2-us-ungupekat th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-ungupekat tr:nth-child, .gaya-tabel-2-us-ungupekat tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-ungupekat tr:hover, .gaya-tabel-2-us-ungupekat tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-ungupekat th, .gaya-tabel-2-us-ungupekat th {
   padding-top: 12px;
@@ -1136,14 +1136,14 @@ a {
 .gaya-tabel-1-us-indigo td, .gaya-tabel-2-us-indigo td,
 .gaya-tabel-1-us-indigo th,
 .gaya-tabel-2-us-indigo th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-indigo tr:nth-child, .gaya-tabel-2-us-indigo tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-indigo tr:hover, .gaya-tabel-2-us-indigo tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-indigo th, .gaya-tabel-2-us-indigo th {
   padding-top: 12px;
@@ -1341,14 +1341,14 @@ a {
 .gaya-tabel-1-us-biru td, .gaya-tabel-2-us-biru td,
 .gaya-tabel-1-us-biru th,
 .gaya-tabel-2-us-biru th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-biru tr:nth-child, .gaya-tabel-2-us-biru tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-biru tr:hover, .gaya-tabel-2-us-biru tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-biru th, .gaya-tabel-2-us-biru th {
   padding-top: 12px;
@@ -1546,14 +1546,14 @@ a {
 .gaya-tabel-1-us-birumuda td, .gaya-tabel-2-us-birumuda td,
 .gaya-tabel-1-us-birumuda th,
 .gaya-tabel-2-us-birumuda th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-birumuda tr:nth-child, .gaya-tabel-2-us-birumuda tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-birumuda tr:hover, .gaya-tabel-2-us-birumuda tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-birumuda th, .gaya-tabel-2-us-birumuda th {
   padding-top: 12px;
@@ -1751,14 +1751,14 @@ a {
 .gaya-tabel-1-us-cyan td, .gaya-tabel-2-us-cyan td,
 .gaya-tabel-1-us-cyan th,
 .gaya-tabel-2-us-cyan th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-cyan tr:nth-child, .gaya-tabel-2-us-cyan tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-cyan tr:hover, .gaya-tabel-2-us-cyan tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-cyan th, .gaya-tabel-2-us-cyan th {
   padding-top: 12px;
@@ -1956,14 +1956,14 @@ a {
 .gaya-tabel-1-us-teal td, .gaya-tabel-2-us-teal td,
 .gaya-tabel-1-us-teal th,
 .gaya-tabel-2-us-teal th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-teal tr:nth-child, .gaya-tabel-2-us-teal tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-teal tr:hover, .gaya-tabel-2-us-teal tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-teal th, .gaya-tabel-2-us-teal th {
   padding-top: 12px;
@@ -2161,14 +2161,14 @@ a {
 .gaya-tabel-1-us-hijau td, .gaya-tabel-2-us-hijau td,
 .gaya-tabel-1-us-hijau th,
 .gaya-tabel-2-us-hijau th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-hijau tr:nth-child, .gaya-tabel-2-us-hijau tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-hijau tr:hover, .gaya-tabel-2-us-hijau tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-hijau th, .gaya-tabel-2-us-hijau th {
   padding-top: 12px;
@@ -2366,14 +2366,14 @@ a {
 .gaya-tabel-1-us-hijaumuda td, .gaya-tabel-2-us-hijaumuda td,
 .gaya-tabel-1-us-hijaumuda th,
 .gaya-tabel-2-us-hijaumuda th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-hijaumuda tr:nth-child, .gaya-tabel-2-us-hijaumuda tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-hijaumuda tr:hover, .gaya-tabel-2-us-hijaumuda tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-hijaumuda th, .gaya-tabel-2-us-hijaumuda th {
   padding-top: 12px;
@@ -2571,14 +2571,14 @@ a {
 .gaya-tabel-1-us-lemon td, .gaya-tabel-2-us-lemon td,
 .gaya-tabel-1-us-lemon th,
 .gaya-tabel-2-us-lemon th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-lemon tr:nth-child, .gaya-tabel-2-us-lemon tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-lemon tr:hover, .gaya-tabel-2-us-lemon tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-lemon th, .gaya-tabel-2-us-lemon th {
   padding-top: 12px;
@@ -2780,14 +2780,14 @@ a {
 .gaya-tabel-1-us-kuning td, .gaya-tabel-2-us-kuning td,
 .gaya-tabel-1-us-kuning th,
 .gaya-tabel-2-us-kuning th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-kuning tr:nth-child, .gaya-tabel-2-us-kuning tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-kuning tr:hover, .gaya-tabel-2-us-kuning tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-kuning th, .gaya-tabel-2-us-kuning th {
   padding-top: 12px;
@@ -2989,14 +2989,14 @@ a {
 .gaya-tabel-1-us-amber td, .gaya-tabel-2-us-amber td,
 .gaya-tabel-1-us-amber th,
 .gaya-tabel-2-us-amber th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-amber tr:nth-child, .gaya-tabel-2-us-amber tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-amber tr:hover, .gaya-tabel-2-us-amber tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-amber th, .gaya-tabel-2-us-amber th {
   padding-top: 12px;
@@ -3198,14 +3198,14 @@ a {
 .gaya-tabel-1-us-jingga td, .gaya-tabel-2-us-jingga td,
 .gaya-tabel-1-us-jingga th,
 .gaya-tabel-2-us-jingga th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-jingga tr:nth-child, .gaya-tabel-2-us-jingga tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-jingga tr:hover, .gaya-tabel-2-us-jingga tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-jingga th, .gaya-tabel-2-us-jingga th {
   padding-top: 12px;
@@ -3213,6 +3213,7 @@ a {
   text-align: left;
   background-color: #ff9800;
   color: #f8feff;
+  color: #212529;
 }
 
 .gaya-tabel-2-us-jingga tr:last-child td {
@@ -3221,6 +3222,7 @@ a {
   text-align: left;
   background-color: #ff9800;
   color: #f8feff;
+  color: #212529;
 }
 
 .form-gaya-1-us-jingga {
@@ -3294,6 +3296,7 @@ a {
   display: inline-block;
   cursor: pointer;
   color: #fff;
+  color: #212529;
   padding: 8px 18px;
   text-decoration: none;
   font: 12px Arial, Helvetica, sans-serif;
@@ -3339,6 +3342,7 @@ a {
 .navigasi-us-jingga li a {
   display: block;
   color: white;
+  color: #212529;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -3403,14 +3407,14 @@ a {
 .gaya-tabel-1-us-jinggapekat td, .gaya-tabel-2-us-jinggapekat td,
 .gaya-tabel-1-us-jinggapekat th,
 .gaya-tabel-2-us-jinggapekat th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-jinggapekat tr:nth-child, .gaya-tabel-2-us-jinggapekat tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-jinggapekat tr:hover, .gaya-tabel-2-us-jinggapekat tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-jinggapekat th, .gaya-tabel-2-us-jinggapekat th {
   padding-top: 12px;
@@ -3608,14 +3612,14 @@ a {
 .gaya-tabel-1-us-cokelat td, .gaya-tabel-2-us-cokelat td,
 .gaya-tabel-1-us-cokelat th,
 .gaya-tabel-2-us-cokelat th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-cokelat tr:nth-child, .gaya-tabel-2-us-cokelat tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-cokelat tr:hover, .gaya-tabel-2-us-cokelat tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-cokelat th, .gaya-tabel-2-us-cokelat th {
   padding-top: 12px;
@@ -3813,14 +3817,14 @@ a {
 .gaya-tabel-1-us-abuabu td, .gaya-tabel-2-us-abuabu td,
 .gaya-tabel-1-us-abuabu th,
 .gaya-tabel-2-us-abuabu th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-abuabu tr:nth-child, .gaya-tabel-2-us-abuabu tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-abuabu tr:hover, .gaya-tabel-2-us-abuabu tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-abuabu th, .gaya-tabel-2-us-abuabu th {
   padding-top: 12px;
@@ -4022,14 +4026,14 @@ a {
 .gaya-tabel-1-us-abuabubiru td, .gaya-tabel-2-us-abuabubiru td,
 .gaya-tabel-1-us-abuabubiru th,
 .gaya-tabel-2-us-abuabubiru th {
-  border: 1px solid #9e9e9e;
+  border: 1.17px solid #9e9e9e;
   padding: 8px;
 }
 .gaya-tabel-1-us-abuabubiru tr:nth-child, .gaya-tabel-2-us-abuabubiru tr:nth-child {
   background-color: #f8feff;
 }
 .gaya-tabel-1-us-abuabubiru tr:hover, .gaya-tabel-2-us-abuabubiru tr:hover {
-  background-color: #9e9e9e;
+  background-color: #00000026;
 }
 .gaya-tabel-1-us-abuabubiru th, .gaya-tabel-2-us-abuabubiru th {
   padding-top: 12px;
